objects/maps__TerritoryNode__c.object
<CustomObject>
    <fields>
        <fullName>maps__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for node selection</description>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__ShapeLayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Shape Layer</label>
        <referenceTo>maps__ShapeLayer__c</referenceTo>
        <relationshipLabel>Territory Nodes</relationshipLabel>
        <relationshipName>TerritoryNodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__TerritoryLayer__c</fullName>
        <label>Maps Territory Layer</label>
        <referenceTo>maps__Layer__c</referenceTo>
        <relationshipLabel>Maps Territory Nodes</relationshipLabel>
        <relationshipName>TerritoryNodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>maps__TerritoryNode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Maps Territory Node</label>
        <referenceTo>maps__TerritoryNode__c</referenceTo>
        <relationshipLabel>Maps Territory Nodes</relationshipLabel>
        <relationshipName>TerritoryNodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Territory Node</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Territory Nodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>